feat: add sitemap, add readme, fix metadata

--- a/lib/i18n/fr.json
+++ b/lib/i18n/fr.json
@@ -1,4 +1,5 @@
 {
+  "title": "diplate.ch",
   "language": "Français",
   "description": "Obtenez des informations sur les plaques diplomatiques en Suisse.",
   "plate_type": "Type de plaque",
