--- a/lib/i18n/it.json
+++ b/lib/i18n/it.json
@@ -1,4 +1,5 @@
 {
+  "title": "diplate.ch",
   "language": "Italiano",
   "description": "Ottieni informazioni sulle targhe diplomatiche in Svizzera.",
   "plate_type": "Tipo di targa",
