--- a/lib/i18n/de.json
+++ b/lib/i18n/de.json
@@ -1,4 +1,5 @@
 {
+  "title": "diplate.ch",
   "language": "Deutsch",
   "description": "Informationen zu Diplomatenkennzeichen in der Schweiz abrufen.",
   "plate_type": "Kennzeichentyp",
