--- a/lib/i18n/en.json
+++ b/lib/i18n/en.json
@@ -1,4 +1,5 @@
 {
+  "title": "diplate.ch",
   "language": "English",
   "description": "Get info about diplomatic license plates in Switzerland.",
   "plate_type": "Plate Type",
