--- a/lib/i18n/en.json
+++ b/lib/i18n/en.json
@@ -25,7 +25,7 @@
   "info-CD_BLUE-0": "Vehicles of permanent missions or other representations to intergovernmental organizations and motor vehicles for the members of the diplomatic staff of these missions.",
   "info-CD_BLUE-1": "Vehicles of institutional beneficiaries such as intergovernmental organizations, international institutions, secretariats or other bodies set up under an international treaty, independent commissions, international courts, arbitral tribunals and other international bodies, who enjoy privileges, immunities and facilities, as well as the motor vehicles of the highest-ranking officials of these institutional beneficiaries, who enjoy diplomatic status in Switzerland.",
   "info-AT_GREEN-0": "Vehicles belonging to members of the administrative and technical staff of diplomatic missions.",
-  "unknown": "unknown",
+  "unknown": "Unknown",
   "license": "MIT License",
   "diplomatic_entity_type": "Type of diplomatic entity",
   "diplomatic-entity-UN_MISSION": "UN Mission",
