fix: cc license plates in langs other than english

--- a/lib/i18n/de.json
+++ b/lib/i18n/de.json
@@ -12,7 +12,7 @@
   "plate_description": "Beschreibung",
   "select-CD_GREEN": "CD (grün)",
   "select-CD_BLUE": "CD (blau)",
-  "select-CC_GREEN": "CD",
+  "select-CC_GREEN": "CC",
   "select-AT_GREEN": "AT",
   "description-CD_GREEN": "Diplomatisches Korps",
   "description-CD_BLUE": "Diplomatisches Korps",
