--- a/lib/i18n/fr.json
+++ b/lib/i18n/fr.json
@@ -12,7 +12,7 @@
   "plate_description": "Description",
   "select-CD_GREEN": "CD (vert)",
   "select-CD_BLUE": "CD (bleu)",
-  "select-CC_GREEN": "CD",
+  "select-CC_GREEN": "CC",
   "select-AT_GREEN": "AT",
   "description-CD_GREEN": "Corps Diplomatique",
   "description-CD_BLUE": "Corps Diplomatique",
