--- a/lib/i18n/it.json
+++ b/lib/i18n/it.json
@@ -12,7 +12,7 @@
   "plate_description": "Descrizione",
   "select-CD_GREEN": "CD (verde)",
   "select-CD_BLUE": "CD (blu)",
-  "select-CC_GREEN": "CD",
+  "select-CC_GREEN": "CC",
   "select-AT_GREEN": "AT",
   "description-CD_GREEN": "Corpo Diplomatico",
   "description-CD_BLUE": "Corpo Diplomatico",
